--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor/android": "5.7.1",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.1",
+    "@capacitor/geolocation": "^5.0.7",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
